# Cmake_demo

./: CMakeLists.txt  Readme.md  main.cpp
modules/caculate/include/: caculate.h
modules/caculate/src/: caculate.cpp
modules/hello/src/: hello.cpp
